Updates and checks

--- a/salt_cfg/master.d/reactor.conf
+++ b/salt_cfg/master.d/reactor.conf
@@ -8,6 +8,6 @@ reactor:
   - 'decom':
     - /srv/reactor/decommision.sls
 
-  - 'minion_start':
-    - /srv/salt/haproxy/configure.sls
+  #- 'minion_start':
+  #  - /srv/salt/haproxy/configure.sls
 
