updated pillar and conf

--- a/salt_cfg/master.d/environments.conf
+++ b/salt_cfg/master.d/environments.conf
@@ -5,3 +5,7 @@ file_roots:
   engineer:
     - /srv/salt/engineer
     - /srv/large_files_store/engineer
+    
+pillar_roots:
+  base:
+    - /srv/pillar      
