--- a/salt_states/salt/apache/files/conf.d/ssl.conf
+++ b/salt_states/salt/apache/files/conf.d/ssl.conf
@@ -39,7 +39,7 @@ SSLSessionCacheTimeout  300
 #   Semaphore:
 #   Configure the path to the mutual exclusion semaphore the
 #   SSL engine uses internally for inter-process synchronization. 
-SSLMutex default
+Mutex sysvsem default
 
 #   Pseudo Random Number Generator (PRNG):
 #   Configure one or more sources to seed the PRNG of the 
@@ -103,7 +103,11 @@ SSLCipherSuite ALL:!ADH:!EXPORT:!SSLv2:RC4+RSA:+HIGH:+MEDIUM:+LOW
 # pass phrase.  Note that a kill -HUP will prompt again.  A new
 # certificate can be generated using the genkey(1) command.
 #SSLCertificateFile /etc/pki/tls/certs/localhost.crt
-SSLCertificateFile /etc/pki/certs/server.crt
+
+## START :: SALT :: ssl_cert_name settings. Do not edit Manually
+
+
+## END :: SALT :: ssl_cert_name settings. Do not edit Manually
 
 #   Server Private Key:
 #   If the key is not combined with the certificate, use this
@@ -121,7 +125,11 @@ SSLCertificateKeyFile /etc/pki/certs/server.key
 #   when the CA certificates are directly appended to the server
 #   certificate for convinience.
 #SSLCertificateChainFile /etc/pki/tls/certs/server-chain.crt
-SSLCertificateChainFile /etc/pki/certs/DigiCertCA.crt
+
+## START :: SALT :: ssl_bundle_name settings. Do not edit Manually
+
+
+## END :: SALT :: ssl_bundle_name settings. Do not edit Manually
 
 #   Certificate Authority (CA):
 #   Set the CA certificate verification path where to find CA
