--- a/salt_cfg/cloud.profiles.d/nminc-build.conf
+++ b/salt_cfg/cloud.profiles.d/nminc-build.conf
@@ -11,6 +11,7 @@ nminc-build:
     grains:
       domain: nminc.co
       farm_name: build
+      farm_role_index: 1
       nodename: build.nminc.co
       node_type: build
       node_env: build
