--- a/salt_states/salt/apache/files/worker.properties
+++ b/salt_states/salt/apache/files/worker.properties
@@ -2,12 +2,17 @@
 ## Workers file for mod_jk 
 ##
 
-workers.tomcat_home=/opt/apache-tomcat
+
 workers.java_home=/opt/jre
 ps=/
 worker.list=worker1
 
-worker.default.port=8009
+
 worker.default.host=localhost
 worker.default.type=ajp13
 worker.default.lbfactor=1
+
+## START :: SALT :: mod_jk settings. Do not edit Manually
+
+
+## END :: SALT :: mod_jk settings. Do not edit Manually
