--- a/salt_cfg/cloud.providers.d/nminc_aws-build.conf
+++ b/salt_cfg/cloud.providers.d/nminc_aws-build.conf
@@ -2,6 +2,7 @@ nminc_aws-build:
  extends: nminc_aws:ec2
  securitygroup:
   - salt-minion-internal
-  - alfresco-internal
+  - httpd-internal
   - ssh-internal
   - icmp-internal
+  - artifactory-internal
