fixed network subnets

--- a/salt_cfg/cloud.profiles.d/nminc-build.conf
+++ b/salt_cfg/cloud.profiles.d/nminc-build.conf
@@ -17,5 +17,6 @@ nminc-build:
       node_env: build
       JAVA_VERSION: 7
       ARTIFACTORY_USER: artifactory    
-   
+   network_interfaces:
+     SubnetID: subnet-d37fa7a4d
   
