--- a/salt_cfg/cloud.profiles.d/nminc-build.conf
+++ b/salt_cfg/cloud.profiles.d/nminc-build.conf
@@ -18,5 +18,5 @@ nminc-build:
       JAVA_VERSION: 7
       ARTIFACTORY_USER: artifactory    
   network_interfaces:
-    subnetID: subnet-d37fa7a4d
+    SubnetID: subnet-d37fa7a4d
   
