more complete interface

--- a/salt_cfg/cloud.profiles.d/nminc-build.conf
+++ b/salt_cfg/cloud.profiles.d/nminc-build.conf
@@ -18,6 +18,10 @@ nminc-build:
       JAVA_VERSION: 7
       ARTIFACTORY_USER: artifactory    
   network_interfaces:
-    SubnetID: 
-      - subnet-d37fa7a4d
+    - DeviceIndex: 0
+        PrivateIpAddresses:
+          - Primary: True
+        #auto assign public ip (not EIP)
+        AssociatePublicIpAddress: True
+        SubnetID: subnet-d37fa7a4d
   
