--- a/salt_cfg/cloud.profiles.d/nminc-build.conf
+++ b/salt_cfg/cloud.profiles.d/nminc-build.conf
@@ -23,5 +23,5 @@ nminc-build:
         - Primary: True
       #auto assign public ip (not EIP)
       AssociatePublicIpAddress: True
-      SubnetID: subnet-d37fa7a4d
+      SubnetId: subnet-d37fa7a4d
   
