--- a/salt_cfg/cloud.providers.d/nminc_aws-build.conf
+++ b/salt_cfg/cloud.providers.d/nminc_aws-build.conf
@@ -1,8 +1,15 @@
 nminc_aws-build:
- extends: nminc_aws:ec2
- securitygroup:
-  - salt-minion-internal
-  - httpd-internal
-  - ssh-internal
-  - icmp-internal
-  - artifactory-internal
+  extends: nminc_aws:ec2
+  network_interfaces:
+    - DeviceIndex: 0
+      PrivateIpAddresses:
+        - Primary: True
+      #auto assign public ip (not EIP)
+      AssociatePublicIpAddress: True
+      SubnetId: subnet-d37fa7a4
+      securitygroup:
+        - salt-minion-internal
+        - httpd-internal
+        - ssh-internal
+        - icmp-internal
+        - artifactory-internal
