fixing cloud profiels

--- a/salt_cfg/cloud.providers.d/nminc_aws-build.conf
+++ b/salt_cfg/cloud.providers.d/nminc_aws-build.conf
@@ -1,15 +1,9 @@
 nminc_aws-build:
   extends: nminc_aws:ec2
-  network_interfaces:
-    - DeviceIndex: 0
-      PrivateIpAddresses:
-        - Primary: True
-      #auto assign public ip (not EIP)
-      AssociatePublicIpAddress: True
-      SubnetId: subnet-d37fa7a4
-      SecurityGroupId:
-        - sg-10509877 #salt-minion-internal
-        - sg-02ad7b65 #httpd-internal
-        - sg-31509856 #ssh-internal
-        - sg-4efb3129 #icmp-internal
-        - sg-8dad7bea #artifactory-internal
+  subnetId: subnet-d37fa7a4
+  securitygroup:
+    - salt-minion-internal
+    - httpd-internal
+    - ssh-internal
+    - icmp-internal
+    - artifactory-internal
