--- a/salt_cfg/cloud.providers.d/nminc_aws-aio.conf
+++ b/salt_cfg/cloud.providers.d/nminc_aws-aio.conf
@@ -1,8 +1,9 @@
 nminc_aws-aio:
- extends: nminc_aws:ec2
- securitygroup:
-  - salt-minion-internal
-  - alfresco-internal
-  - ssh-internal
-  - icmp-internal
-  - jms-internal
+  extends: nminc_aws:ec2
+  subnetId: subnet-d37fa7a4
+  securitygroup:
+    - salt-minion-internal
+    - alfresco-internal
+    - ssh-internal
+    - icmp-internal
+    - jms-internal
