upping size of allinone

--- a/salt_cfg/cloud.profiles.d/ea.conf
+++ b/salt_cfg/cloud.profiles.d/ea.conf
@@ -1,6 +1,6 @@
 ea:
   extends: nminc-aio
-  size: m4.large
+  size: m4.xlarge
   block_device_mappings:
     DeviceName: /dev/sda1
     Ebs.VolumeSize: 10
