--- a/salt_states/salt/tomcat/files/tomcat.service
+++ b/salt_states/salt/tomcat/files/tomcat.service
@@ -8,11 +8,11 @@ Type=forking
 User=tomcat
 Group=tomcat
 
-ExecStart=/opt/local/apache-tomcat/bin/startup.sh
-ExecStop=/opt/local/apache-tomcat/bin/shutdown.sh
+ExecStart={{ pillar['tomcat_home'] }}/bin/startup.sh
+ExecStop={{ pillar['tomcat_home'] }}/bin/shutdown.sh
 
-ExecReload=/opt/local/apache-tomcat/bin/shutdown.sh
-ExecReload=/opt/local/apache-tomcat/bin/startup.sh
+ExecReload={{ pillar['tomcat_home'] }}/bin/shutdown.sh
+ExecReload={{ pillar['tomcat_home'] }}/bin/startup.sh
 
 
 [Install]
