--- a/salt_cfg/cloud.profiles.d/ea.conf
+++ b/salt_cfg/cloud.profiles.d/ea.conf
@@ -18,3 +18,4 @@ ea:
       ALFRESCO_LICENSE_TYPE: community
       ALERT_EMAIL: cgaley@nomagic.com
       MMS_RELEASE_VERSION: 2.1
+      LDAP: ldap-ad
