--- a/salt_cfg/cloud.profiles.d/nminc-aio.conf
+++ b/salt_cfg/cloud.profiles.d/nminc-aio.conf
@@ -1,7 +1,14 @@
 nminc-aio:
-  provider: nminc_aws-aio
+  provider: nminc_aws
+  subnetId: subnet-d37fa7a4
   image: ami-96a818fe
   size: t2.large
   ssh_username: centos
+  securitygroup:
+    - salt-minion-internal
+    - alfresco-internal
+    - ssh-internal
+    - icmp-internal
+    - jms-internal
   minion:
     master: salt.nminc.co
