--- a/salt_cfg/cloud.profiles.d/nminc-build.conf
+++ b/salt_cfg/cloud.profiles.d/nminc-build.conf
@@ -7,6 +7,13 @@ nminc-build:
     Ebs.VolumeSize: 10
     Ebs.VolumeType: gp2
   ssh_username: centos
+  subnetId: subnet-d37fa7a4
+  securitygroup:
+    - salt-minion-internal
+    - httpd-internal
+    - ssh-internal
+    - icmp-internal
+    - artifactory-internal
   minion:
     grains:
       domain: nminc.co
