--- a/salt_cfg/cloud.profiles.d/openmbee.conf
+++ b/salt_cfg/cloud.profiles.d/openmbee.conf
@@ -1,11 +1,17 @@
 openmbee:
   extends: nminc-aio
-  provider: nminc_open-aio
   size: m4.xlarge
   block_device_mappings:
     DeviceName: /dev/sda1
     Ebs.VolumeSize: 10
     Ebs.VolumeType: gp2
+  subnetId: subnet-3bd32962
+  securitygroup:
+    - salt-minion-internal
+    - alfresco-external
+    - ssh-internal
+    - icmp-all
+    - jms-external
   minion:
     grains:
       domain: openmbee.com
@@ -18,4 +24,4 @@ openmbee:
       ALFRESCO_VERSION: 4.2.e
       ALFRESCO_LICENSE_TYPE: community
       ALERT_EMAIL: cgaley@nomagic.com
-      MMS_RELEASE_VERSION: 2.1
+      MMS_RELEASE_VERSION: 2.2
