--- a/salt_cfg/cloud.maps.d/dns.conf
+++ b/salt_cfg/cloud.maps.d/dns.conf
@@ -1,5 +1,5 @@
 nameserver:
-  - ns1.nminc.co
+  - ns1.nminc.co:
     minion:
       grains:
         domain: nminc.co
@@ -15,7 +15,7 @@ nameserver:
         SecurityGroupId:
           - sg-3d981f5a
 
-  - ns2.nminc.co
+  - ns2.nminc.co:
     minion:
         grains:
           domain: nminc.co
