trying without ips

--- a/salt_cfg/cloud.maps.d/dns.conf
+++ b/salt_cfg/cloud.maps.d/dns.conf
@@ -6,14 +6,9 @@ nameserver:
         farmname: ns1
         nodename: ns1.nminc.co
         node_type: ns-master
-    network_interfaces:
-      - DeviceIndex: 0
-        PrivateIpAddress:
-          - Primary: True
-            PrivateIpAddress: 172.31.16.10
-        SubnetId: subnet-d37fa7a4
-        SecurityGroupId:
-          - sg-3d981f5a
+    subnetid: subnet-d37fa7a4
+    securitygroupid:
+      - sg-3d981f5a
 
   - ns2.nminc.co:
     minion:
@@ -22,11 +17,6 @@ nameserver:
         farmname: ns2
         nodename: ns2.nminc.co
         node_type: ns-slave
-    network_interfaces:
-      - DeviceIndex: 0
-        PrivateIpAddress:
-          - Primary: True
-            PrivateIpAddress: 172.31.16.11
-        SubnetId: subnet-d37fa7a4
-        SecurityGroupId:
-          - sg-3d981f5a
+    subnetId: subnet-d37fa7a4
+    securitygroupid:
+      - sg-3d981f5a
