--- a/salt_cfg/cloud.maps.d/dns.conf
+++ b/salt_cfg/cloud.maps.d/dns.conf
@@ -17,6 +17,6 @@ nameserver:
         farmname: ns2
         nodename: ns2.nminc.co
         node_type: ns-slave
-    subnetId: subnet-d37fa7a4
+    subnetid: subnet-d37fa7a4
     securitygroupid:
       - sg-3d981f5a
