trying something else

--- a/salt_cfg/cloud.profiles.d/nameserver.conf
+++ b/salt_cfg/cloud.profiles.d/nameserver.conf
@@ -9,3 +9,28 @@ nameserver:
     DeviceName: /dev/sda1
     Ebs.VolumeSize: 10
     Ebs.VolumeType: gp2
+    
+
+ns1.nminc.co:
+  extends: nameserver
+  minion:
+    grains:
+      domain: nminc.co
+      farmname: ns1
+      nodename: ns1.nminc.co
+      node_type: ns-master
+  subnetid: subnet-d37fa7a4
+  securitygroupid:
+    - sg-3d981f5a
+
+ns2.nminc.co:
+  extends: nameserver
+  minion:
+    grains:
+      domain: nminc.co
+      farmname: ns2
+      nodename: ns2.nminc.co
+      node_type: ns-slave
+  subnetid: subnet-d37fa7a4
+  securitygroupid:
+    - sg-3d981f5a
