--- a/salt_cfg/cloud.profiles.d/nameserver.conf
+++ b/salt_cfg/cloud.profiles.d/nameserver.conf
@@ -21,9 +21,9 @@ ns1.nminc.co:
       node_type: ns-master
   network_interfaces:
     - DeviceIndex: 0
-      PrivateIpAddress:
+      PrivateIpAddresses:
         - Primary: True
-          PrivateIpAddress: 172.31.16.10
+        PrivateIpAddress: 172.31.16.10
       SubnetId: subnet-d37fa7a4
       SecurityGroupid:
         - sg-3d981f5a
@@ -39,9 +39,9 @@ ns2.nminc.co:
       node_type: ns-slave
   network_interfaces:
     - DeviceIndex: 0
-      PrivateIpAddress:
+      PrivateIpAddresses:
         - Primary: True
-          PrivateIpAddress: 172.31.16.11
+        PrivateIpAddress: 172.31.16.11
       SubnetId: subnet-d37fa7a4
       SecurityGroupid:
         - sg-3d981f5a
