--- a/salt_cfg/cloud.profiles.d/nameserver.conf
+++ b/salt_cfg/cloud.profiles.d/nameserver.conf
@@ -19,15 +19,10 @@ ns1.nminc.co:
       farmname: ns1
       nodename: ns1.nminc.co
       node_type: ns-master
-  network_interfaces:
-    - DeviceIndex: 0
-      PrivateIpAddresses:
-        - Primary: True
-          PrivateIpAddress: 172.31.16.10
-      SubnetId: subnet-d37fa7a4
-      SecurityGroupid:
-        - sg-3d981f5a
-        - sg-10509877
+  subnetid: subnet-d37fa7a4
+  securitygroupid:
+    - sg-3d981f5a
+    - sg-10509877
 
 ns2.nminc.co:
   extends: nameserver
@@ -37,12 +32,7 @@ ns2.nminc.co:
       farmname: ns2
       nodename: ns2.nminc.co
       node_type: ns-slave
-  network_interfaces:
-    - DeviceIndex: 0
-      PrivateIpAddresses:
-        - Primary: True
-          PrivateIpAddress: 172.31.16.11
-      SubnetId: subnet-d37fa7a4
-      SecurityGroupid:
-        - sg-3d981f5a
-        - sg-10509877
+  subnetid: subnet-d37fa7a4
+  securitygroupid:
+    - sg-3d981f5a
+    - sg-10509877
