changes to name servers

--- a/salt_cfg/cloud.maps.d/dns.conf
+++ b/salt_cfg/cloud.maps.d/dns.conf
@@ -7,8 +7,11 @@ nameserver:
         nodename: ns1.nminc.co
         node_type: ns-master
     subnetid: subnet-d37fa7a4
-    securitygroupid:
-      - sg-3d981f5a
+    privateipaddress: 172.31.16.10
+    securitygroup:
+      - nameserver-internal
+      - salt-minion-internal
+      - ssh-internal
 
   - ns2.nminc.co:
     minion:
@@ -18,5 +21,8 @@ nameserver:
         nodename: ns2.nminc.co
         node_type: ns-slave
     subnetid: subnet-d37fa7a4
-    securitygroupid:
-      - sg-3d981f5a
+    privateipaddress: 172.31.16.11
+    securitygroup:
+      - nameserver-internal
+      - salt-minion-internal
+      - ssh-internal
