--- a/salt_cfg/cloud.profiles.d/nameserver.conf
+++ b/salt_cfg/cloud.profiles.d/nameserver.conf
@@ -20,9 +20,11 @@ ns1.nminc.co:
       nodename: ns1.nminc.co
       node_type: ns-master
   subnetid: subnet-d37fa7a4
-  securitygroupid:
-    - sg-3d981f5a
-    - sg-10509877
+  privateipaddress: 172.31.16.10
+  securitygroup:
+    - nameserver-internal
+    - salt-minion-internal
+    - ssh-internal
 
 ns2.nminc.co:
   extends: nameserver
@@ -33,6 +35,8 @@ ns2.nminc.co:
       nodename: ns2.nminc.co
       node_type: ns-slave
   subnetid: subnet-d37fa7a4
-  securitygroupid:
-    - sg-3d981f5a
-    - sg-10509877
+  privateipaddress: 172.31.16.11
+  securitygroup:
+    - nameserver-internal
+    - salt-minion-internal
+    - ssh-internal
