--- a/salt_cfg/cloud.profiles.d/nameserver.conf
+++ b/salt_cfg/cloud.profiles.d/nameserver.conf
@@ -21,10 +21,10 @@ ns1.nminc.co:
       node_type: ns-master
   subnetid: subnet-d37fa7a4
   privateipaddress: 172.31.16.10
-  securitygroup:
-    - nameserver-internal
-    - salt-minion-internal
-    - ssh-internal
+  securitygroupid:
+    - sg-3d981f5a
+    - sg-10509877
+    - sg-31509856
 
 ns2.nminc.co:
   extends: nameserver
@@ -36,7 +36,7 @@ ns2.nminc.co:
       node_type: ns-slave
   subnetid: subnet-d37fa7a4
   privateipaddress: 172.31.16.11
-  securitygroup:
-    - nameserver-internal
-    - salt-minion-internal
-    - ssh-internal
+  securitygroupid:
+    - sg-3d981f5a
+    - sg-10509877
+    - sg-31509856
