--- a/salt_cfg/cloud.profiles.d/nameserver.conf
+++ b/salt_cfg/cloud.profiles.d/nameserver.conf
@@ -19,6 +19,7 @@ ns1.nminc.co:
       farmname: ns1
       nodename: ns1.nminc.co
       node_type: ns-master
+      farm_role_index: 1
   subnetid: subnet-d37fa7a4
   privateipaddress: 172.31.16.10
   securitygroupid:
@@ -34,6 +35,7 @@ ns2.nminc.co:
       farmname: ns2
       nodename: ns2.nminc.co
       node_type: ns-slave
+      farm_role_index: 1
   subnetid: subnet-d37fa7a4
   privateipaddress: 172.31.16.11
   securitygroupid:
