--- a/salt_cfg/cloud.profiles.d/nameserver.conf
+++ b/salt_cfg/cloud.profiles.d/nameserver.conf
@@ -16,7 +16,7 @@ ns1.nminc.co:
   minion:
     grains:
       domain: nminc.co
-      farmname: ns1
+      farm_name: ns1
       nodename: ns1.nminc.co
       node_type: ns-master
       farm_role_index: 1
@@ -32,7 +32,7 @@ ns2.nminc.co:
   minion:
     grains:
       domain: nminc.co
-      farmname: ns2
+      farm_name: ns2
       nodename: ns2.nminc.co
       node_type: ns-slave
       farm_role_index: 1
