significant rework of dns

--- a/salt_cfg/cloud.profiles.d/nameserver.conf
+++ b/salt_cfg/cloud.profiles.d/nameserver.conf
@@ -18,8 +18,15 @@ ns1.nminc.co:
       domain: nminc.co
       farm_name: ns1
       nodename: ns1.nminc.co
-      node_type: ns-master
+      node_type: ns
+      dns_type: master
       farm_role_index: 1
+      dns_reverse: 31.172
+      dns_trusted:
+        - 10.3.0.0/16
+        - 172.31.0.0/16
+        - 10.91.55.0/24
+        - localhost
   subnetid: subnet-d37fa7a4
   privateipaddress: 172.31.16.10
   securitygroupid:
@@ -34,8 +41,15 @@ ns2.nminc.co:
       domain: nminc.co
       farm_name: ns2
       nodename: ns2.nminc.co
-      node_type: ns-slave
+      node_type: ns
+      dns_type: slave
       farm_role_index: 1
+      dns_reverse: 31.172
+      dns_trusted:
+        - 10.3.0.0/16
+        - 172.31.0.0/16
+        - 10.91.55.0/24
+        - localhost
   subnetid: subnet-d37fa7a4
   privateipaddress: 172.31.16.11
   securitygroupid:
