--- a/salt_cfg/master.d/reactor.conf
+++ b/salt_cfg/master.d/reactor.conf
@@ -1,5 +1,8 @@
 reactor:
 
+  - 'minion_start':
+    - /srv/reactor/sync_grains.sls
+    
   - 'salt/auth':
     - /srv/reactor/auth-pending.sls
   - 'salt/minion/*/start':
