--- a/salt_cfg/cloud.profiles.d/openmbee.conf
+++ b/salt_cfg/cloud.profiles.d/openmbee.conf
@@ -14,9 +14,9 @@ openmbee:
     - jms-external
   minion:
     grains:
-      domain: openmbee.com
-      farm_name: openmbee
-      nodename: openmbee.com
+      domain: nminc.co
+      farm_name: open
+      nodename: open.nminc.co
       node_type: allinone
       node_env: prod
       JAVA_VERSION: 7
