update teamwork profile

--- a/salt_cfg/cloud.profiles.d/teamwork.conf
+++ b/salt_cfg/cloud.profiles.d/teamwork.conf
@@ -1,6 +1,9 @@
 teamwork:
-  extends: nminc-aio
-  size: m4.xlarge
+  provider: nminc_aws
+  subnetId: subnet-d37fa7a4
+  image: ami-96a818fe
+  size: t2.large
+  ssh_username: centos
   block_device_mappings:
     DeviceName: /dev/sda1
     Ebs.VolumeSize: 10
@@ -11,6 +14,7 @@ teamwork:
     - ssh-internal
     - salt-minion-internal
   minion:
+    master: salt.nminc.co
     grains:
       node_type: teamwork
       node_env: prod
