--- a/salt_cfg/cloud.profiles.d/teamwork.conf
+++ b/salt_cfg/cloud.profiles.d/teamwork.conf
@@ -20,6 +20,7 @@ teamwork:
       node_env: prod
       JAVA_VERSION: 8
       MAGICDRAW_VERSION: 182
+      teamwork_number: 01
       
 teamwork-ext:
   extends: teamwork
