change many profiles

--- a/salt_cfg/cloud.profiles.d/nameserver.conf
+++ b/salt_cfg/cloud.profiles.d/nameserver.conf
@@ -11,13 +11,10 @@ nameserver:
     Ebs.VolumeType: gp2
     
 
-ns1.nminc.co:
+ns-master:
   extends: nameserver
   minion:
     grains:
-      domain: nminc.co
-      farm_name: ns1
-      nodename: ns1.nminc.co
       node_type: ns
       dns_type: master
       farm_role_index: 1
@@ -34,13 +31,10 @@ ns1.nminc.co:
     - sg-10509877
     - sg-31509856
 
-ns2.nminc.co:
+ns-slave:
   extends: nameserver
   minion:
     grains:
-      domain: nminc.co
-      farm_name: ns2
-      nodename: ns2.nminc.co
       node_type: ns
       dns_type: slave
       farm_role_index: 1
