--- a/salt_cfg/cloud.profiles.d/teamwork.conf
+++ b/salt_cfg/cloud.profiles.d/teamwork.conf
@@ -17,6 +17,7 @@ teamwork:
     master: salt.nminc.co
     grains:
       node_type: teamwork
+      farm_role_index: 1
       node_env: prod
       JAVA_VERSION: 8
       MAGICDRAW_VERSION: 182
