--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,4 @@ salt_states/salt/apache/files/certs/**
 ## Ignore authentication
 salt_states/pillar/smtp/init.sls
 salt_states/pillar/alfresco/init.sls
+salt_states/pillar/ldap/init.sls
