--- a/salt_cfg/cloud.profiles.d/teamwork.conf
+++ b/salt_cfg/cloud.profiles.d/teamwork.conf
@@ -19,8 +19,9 @@ teamwork:
       node_type: teamwork
       farm_role_index: 1
       node_env: prod
-      JAVA_VERSION: 8
+      JAVA_VERSION: Oracle8
       MAGICDRAW_VERSION: 182
+      TEAMWORK_LIC_INSTALLED: False
       
 teamwork-ext:
   extends: teamwork
