--- a/salt_cfg/cloud.profiles.d/teamwork.conf
+++ b/salt_cfg/cloud.profiles.d/teamwork.conf
@@ -16,6 +16,7 @@ teamwork:
   minion:
     master: salt.nminc.co
     grains:
+      farm_name: ''
       node_type: teamwork
       farm_role_index: 1
       node_env: prod
