--- a/salt_cfg/cloud.profiles.d/ea.conf
+++ b/salt_cfg/cloud.profiles.d/ea.conf
@@ -7,6 +7,9 @@ ea:
     Ebs.VolumeType: gp2
   minion:
     grains:
+      farm_name: ''
+      nodename: ''
+      domain: ''
       node_type: allinone
       node_env: prod
       JAVA_VERSION: 7
