--- a/salt_cfg/cloud.profiles.d/nminc-build.conf
+++ b/salt_cfg/cloud.profiles.d/nminc-build.conf
@@ -16,6 +16,9 @@ nminc-build:
     - artifactory-internal
   minion:
     grains:
+      farm_name: ''
+      nodename: ''
+      domain: ''
       farm_role_index: 1
       node_type: build
       node_env: build
