--- a/salt_cfg/cloud.profiles.d/openmbee.conf
+++ b/salt_cfg/cloud.profiles.d/openmbee.conf
@@ -14,9 +14,9 @@ openmbee:
     - jms-external
   minion:
     grains:
-      domain: nminc.co
-      farm_name: open
-      nodename: open.nminc.co
+      farm_name: ''
+      nodename: ''
+      domain: ''
       node_type: allinone
       node_env: prod
       JAVA_VERSION: 7
