--- a/salt_cfg/cloud.profiles.d/salt.conf
+++ b/salt_cfg/cloud.profiles.d/salt.conf
@@ -13,9 +13,10 @@ salt:
     - salt-master-internal
   minion:
     grains:
-      farm_name: salt
+      farm_name: ''
+      nodename: ''
+      domain: ''
       farm_role_index: 1
-      nodename: salt.nminc.co
       node_type: salt
       node_env: base
   
