--- a/salt_cfg/cloud.profiles.d/teamwork.conf
+++ b/salt_cfg/cloud.profiles.d/teamwork.conf
@@ -17,6 +17,8 @@ teamwork:
     master: salt.nminc.co
     grains:
       farm_name: ''
+      nodename: ''
+      domain: ''
       node_type: teamwork
       farm_role_index: 1
       node_env: prod
