--- a/salt_cfg/cloud.profiles.d/teamwork.conf
+++ b/salt_cfg/cloud.profiles.d/teamwork.conf
@@ -15,6 +15,10 @@ teamwork:
     - salt-minion-internal
   minion:
     master: salt.nminc.co
+    startup_states: sls
+    sls_list:
+      - util.python_deps
+      - grains
     grains:
       farm_name: ''
       nodename: ''
