--- a/salt_cfg/master.d/reactor.conf
+++ b/salt_cfg/master.d/reactor.conf
@@ -1,7 +1,7 @@
 reactor:
 
   - 'minion_start':
-    - /srv/reactor/sync_grains.sls
+    - /srv/reactor/sync_all.sls
     
   - 'salt/auth':
     - /srv/reactor/auth-pending.sls
