--- a/salt_cfg/cloud.profiles.d/nameserver.conf
+++ b/salt_cfg/cloud.profiles.d/nameserver.conf
@@ -3,7 +3,7 @@ nameserver:
   image: ami-96a818fe
   ssh_username: centos
   minion:
-    master: salt.nminc.co
+    master: salt.nminc.co.
   size: t2.micro
   block_device_mappings:
     DeviceName: /dev/sda1
