--- a/salt_cfg/cloud.profiles.d/teamwork.conf
+++ b/salt_cfg/cloud.profiles.d/teamwork.conf
@@ -14,7 +14,7 @@ teamwork:
     - ssh-internal
     - salt-minion-internal
   minion:
-    master: salt.nminc.co
+    master: salt.nminc.co.
     startup_states: sls
     sls_list:
       - util.python_deps
