major additiosn to teamwork

--- a/salt_cfg/cloud.profiles.d/teamwork.conf
+++ b/salt_cfg/cloud.profiles.d/teamwork.conf
@@ -12,6 +12,7 @@ teamwork:
   securitygroup:
     - teamwork-internal
     - ssh-internal
+    - vnc-internal
     - salt-minion-internal
   minion:
     master: salt.nminc.co.
@@ -29,10 +30,12 @@ teamwork:
       JAVA_VERSION: Oracle8
       MAGICDRAW_VERSION: 182
       TEAMWORK_LIC_INSTALLED: False
+      VNC_CONFIGURED: False
       
 teamwork-ext:
   extends: teamwork
   securitygroup:
     - teamwork-external
     - ssh-internal
+    - vnc-internal
     - salt-minion-internal
