changes to cloud

--- a/salt_cfg/cloud.profiles.d/cedw.conf
+++ b/salt_cfg/cloud.profiles.d/cedw.conf
@@ -1,14 +1,12 @@
 cedw:
-  provider: nminc_aws
-  subnetId: subnet-d37fa7a4
+  extends: pure_private
   image: ami-96a818fe
   size: t2.large
   ssh_username: centos
   block_device_mappings:
     DeviceName: /dev/sda1
-    Ebs.VolumeSize: 10
+    Ebs.VolumeSize: 100
     Ebs.VolumeType: gp2
-  subnetId: subnet-3bd32962
   securitygroup:
     - cedw-internal
     - ssh-internal
