--- a/salt_cfg/cloud.profiles.d/nameserver.conf
+++ b/salt_cfg/cloud.profiles.d/nameserver.conf
@@ -1,5 +1,5 @@
 nameserver:
-  provider: nminc_aws
+  extends: pure-private
   image: ami-96a818fe
   ssh_username: centos
   minion:
@@ -26,8 +26,7 @@ ns-master:
         - 172.31.0.0/16
         - 10.91.55.0/24
         - localhost
-  subnetid: subnet-d37fa7a4
-  privateipaddress: 172.31.16.10
+  subnetId: subnet-57610c6d
   securitygroupid:
     - sg-3d981f5a
     - sg-10509877
@@ -48,8 +47,7 @@ ns-slave:
         - 172.31.0.0/16
         - 10.91.55.0/24
         - localhost
-  subnetid: subnet-d37fa7a4
-  privateipaddress: 172.31.16.11
+  subnetId: subnet-57610c6d
   securitygroupid:
     - sg-3d981f5a
     - sg-10509877
