rework of cloud profiles

--- a/salt_cfg/cloud.profiles.d/nameserver.conf
+++ b/salt_cfg/cloud.profiles.d/nameserver.conf
@@ -26,6 +26,19 @@ ns-master:
         - 172.31.0.0/16
         - 10.91.55.0/24
         - localhost
+      publicrecord:
+        twpub:
+          type: A
+          value: 52.3.39.83
+        go:
+          type: CNAME
+          value: cname.bitly.com.
+        www:
+          type: CNAME
+          value: www.nomagic.com.
+        at:
+          type: PTR
+          value: www.nminc.co.
   subnetId: subnet-57610c6d
   securitygroupid:
     - sg-3d981f5a
