--- a/salt_cfg/cloud.profiles.d/nameserver.conf
+++ b/salt_cfg/cloud.profiles.d/nameserver.conf
@@ -39,11 +39,18 @@ ns-master:
         at:
           type: PTR
           value: www.nminc.co.
-  subnetId: subnet-57610c6d
-  securitygroupid:
-    - sg-3d981f5a
-    - sg-10509877
-    - sg-31509856
+  network_interfaces:
+    - DeviceIndex: 0
+      PrivateIpAddresses:
+        - Primary: True
+      PrivateIpAddress: 172.31.19.184
+      #auto assign public ip (not EIP)
+      AssociatePublicIpAddress: False
+      SubnetId: subnet-d37fa7a4
+      SecurityGroupId:
+        - sg-3d981f5a
+        - sg-10509877
+        - sg-31509856
 
 ns-slave:
   extends: nameserver
