--- a/salt_cfg/cloud.profiles.d/nat.conf
+++ b/salt_cfg/cloud.profiles.d/nat.conf
@@ -11,8 +11,8 @@ nat:
       node_type: nat
   size: t2.medium
   block_device_mappings:
-    DeviceName: /dev/sda1
-    Ebs.VolumeSize: 10
+    DeviceName: /dev/xvda
+    Ebs.VolumeSize: 8
     Ebs.VolumeType: gp2    
   network_interfaces:
     - DeviceIndex: 0
