--- a/salt_cfg/cloud.profiles.d/nat.conf
+++ b/salt_cfg/cloud.profiles.d/nat.conf
@@ -1,7 +1,7 @@
 nat:
   provider: nminc_aws
   image: ami-184dc970
-  ssh_username: ec2_user
+  ssh_username: ec2-user
   minion:
     master: salt.nminc.co.
     grains:
