--- a/salt_cfg/cloud.profiles.d/nameserver.conf
+++ b/salt_cfg/cloud.profiles.d/nameserver.conf
@@ -2,6 +2,7 @@ nameserver:
   provider: nminc_aws
   image: ami-96a818fe
   ssh_username: centos
+  rename_on_destroy: True
   minion:
     master: salt.nminc.co.
   size: t2.micro
