--- a/salt_cfg/cloud.profiles.d/nat.conf
+++ b/salt_cfg/cloud.profiles.d/nat.conf
@@ -2,6 +2,7 @@ nat:
   provider: nminc_aws
   image: ami-184dc970
   ssh_username: ec2-user
+  rename_on_destroy: True
   minion:
     master: salt.nminc.co.
     grains:
