--- a/salt_cfg/cloud.profiles.d/nminc-aio.conf
+++ b/salt_cfg/cloud.profiles.d/nminc-aio.conf
@@ -2,6 +2,7 @@ nminc-aio:
   provider: nminc_aws
   subnetId: subnet-d37fa7a4
   image: ami-96a818fe
+  rename_on_destroy: True
   size: t2.large
   ssh_username: centos
   securitygroup:
