--- a/salt_cfg/cloud.profiles.d/teamwork.conf
+++ b/salt_cfg/cloud.profiles.d/teamwork.conf
@@ -31,6 +31,8 @@ teamwork:
       MAGICDRAW_VERSION: 182
       TEAMWORK_LIC_INSTALLED: False
       VNC_CONFIGURED: False
+      vnc_user: teamwork
+      vnc_group: teamwork
       
 teamwork-ext:
   extends: teamwork
