ready conf for nameserver

--- a/salt_cfg/cloud.profiles.d/nameserver.conf
+++ b/salt_cfg/cloud.profiles.d/nameserver.conf
@@ -68,8 +68,15 @@ ns-slave:
         - 172.31.0.0/16
         - 10.91.55.0/24
         - localhost
-  subnetId: subnet-57610c6d
-  securitygroupid:
-    - sg-3d981f5a
-    - sg-10509877
-    - sg-31509856
+  network_interfaces:
+    - DeviceIndex: 0
+      PrivateIpAddresses:
+        - Primary: True
+      PrivateIpAddress: 172.31.19.208
+      #auto assign public ip (not EIP)
+      AssociatePublicIpAddress: False
+      SubnetId: subnet-d37fa7a4
+      SecurityGroupId:
+        - sg-3d981f5a
+        - sg-10509877
+        - sg-31509856
