--- a/salt_cfg/cloud.profiles.d/nameserver.conf
+++ b/salt_cfg/cloud.profiles.d/nameserver.conf
@@ -43,7 +43,7 @@ ns-master:
   network_interfaces:
     - DeviceIndex: 0
       PrivateIpAddresses:
-        - Primary: True
+        - Primary: False
       PrivateIpAddress: 172.31.19.184
       #auto assign public ip (not EIP)
       AssociatePublicIpAddress: False
