--- a/salt_cfg/cloud.profiles.d/nameserver.conf
+++ b/salt_cfg/cloud.profiles.d/nameserver.conf
@@ -50,6 +50,8 @@ ns-master:
         - sg-3d981f5a
         - sg-10509877
         - sg-31509856
+        - sg-4efb3129
+      SourceDestCheck: False
 
 ns-slave:
   extends: nameserver
@@ -78,3 +80,5 @@ ns-slave:
         - sg-3d981f5a
         - sg-10509877
         - sg-31509856
+        - sg-4efb3129
+      SourceDestCheck: False
