--- a/salt_cfg/cloud.profiles.d/nat.conf
+++ b/salt_cfg/cloud.profiles.d/nat.conf
@@ -20,9 +20,26 @@ nat:
       PrivateIpAddresses:
         - Primary: True
       #auto assign public ip (not EIP)
-      AssociatePublicIpAddress: False
+      AssociatePublicIpAddress: True
+      SubnetId: subnet-572b230e
+      SourceDestCheck: False
+      SecurityGroupId:
+        - sg-0557da63
+        - sg-b526fbd2
+        - sg-31509856
+        - sg-10509877
+        
+ nminc-nat
+   extends: nat
+   network_interfaces:
+    - DeviceIndex: 0
+      PrivateIpAddresses:
+        - Primary: True
+      #auto assign public ip (not EIP)
+      AssociatePublicIpAddress: True
       associate_eip: eipalloc-b32374d6
       SubnetId: subnet-572b230e
+      SourceDestCheck: False
       SecurityGroupId:
         - sg-0557da63
         - sg-b526fbd2
