--- a/salt_cfg/cloud.profiles.d/teamwork.conf
+++ b/salt_cfg/cloud.profiles.d/teamwork.conf
@@ -5,6 +5,7 @@ teamwork:
   image: ami-96a818fe
   size: t2.large
   ssh_username: centos
+  sourcedestcheck: False
   block_device_mappings:
     DeviceName: /dev/sda1
     Ebs.VolumeSize: 10
@@ -36,6 +37,7 @@ teamwork:
       
 teamwork-ext:
   extends: teamwork
+  sourcedestcheck: True
   securitygroup:
     - teamwork-external
     - ssh-internal
