--- a/salt_cfg/cloud.profiles.d/nat.conf
+++ b/salt_cfg/cloud.profiles.d/nat.conf
@@ -29,7 +29,7 @@ nat:
         - sg-31509856
         - sg-10509877
         
- nminc-nat
+ nminc-nat:
    extends: nat
    network_interfaces:
     - DeviceIndex: 0
