--- a/salt_cfg/cloud.profiles.d/teamwork.conf
+++ b/salt_cfg/cloud.profiles.d/teamwork.conf
@@ -37,6 +37,7 @@ teamwork:
       
 teamwork-ext:
   extends: teamwork
+  subnetId: subnet-d37fa7a4
   sourcedestcheck: True
   securitygroup:
     - teamwork-external
