--- a/salt_cfg/cloud.profiles.d/teamwork.conf
+++ b/salt_cfg/cloud.profiles.d/teamwork.conf
@@ -1,6 +1,8 @@
 teamwork:
   provider: nminc_aws
   rename_on_destroy: True
+  location: us-east-1
+  availibility_zone: us-east-1a
   subnetId: subnet-d37fa7a4
   image: ami-96a818fe
   size: t2.large
@@ -37,7 +39,9 @@ teamwork:
       
 teamwork-ext:
   extends: teamwork
-  subnetId: subnet-d37fa7a4
+  location: us-east-1
+  availibility_zone: us-east-1e
+  subnetId: subnet-57610c6d
   sourcedestcheck: True
   securitygroup:
     - teamwork-external
