--- a/salt_cfg/cloud.profiles.d/teamwork.conf
+++ b/salt_cfg/cloud.profiles.d/teamwork.conf
@@ -1,22 +1,25 @@
 teamwork:
   provider: nminc_aws
   rename_on_destroy: True
-  location: us-east-1
-  availibility_zone: us-east-1a
-  subnetId: subnet-d37fa7a4
   image: ami-96a818fe
   size: t2.large
   ssh_username: centos
-  sourcedestcheck: False
+  network_interfaces:
+    - DeviceIndex: 0
+      SubnetId: subnet-d37fa7a4
+      #comment if not using nat routing
+      SourceDestCheck: False
+      SecurityGroupId:
+        - sg-87a93ee0 #teamwork-internal
+        - sg-31509856 #ssh-internal
+        - sg-47c0fc20 #vnc-internal
+        - sg-1050987 #salt-minion-internal
   block_device_mappings:
     DeviceName: /dev/sda1
     Ebs.VolumeSize: 10
     Ebs.VolumeType: gp2
   securitygroup:
-    - teamwork-internal
-    - ssh-internal
-    - vnc-internal
-    - salt-minion-internal
+    7
   minion:
     master: salt.nminc.co.
     startup_states: sls
@@ -39,12 +42,12 @@ teamwork:
       
 teamwork-ext:
   extends: teamwork
-  location: us-east-1
-  availibility_zone: us-east-1e
-  subnetId: subnet-57610c6d
-  sourcedestcheck: True
-  securitygroup:
-    - teamwork-external
-    - ssh-internal
-    - vnc-internal
-    - salt-minion-internal
+  network_interfaces:
+    - DeviceIndex: 0
+      SubnetId: subnet-57610c6d
+      SourceDestCheck: True
+      SecurityGroupId:
+        - sg-57a83f30 #teamwork-external
+        - sg-31509856 #ssh-internal
+        - sg-47c0fc20 #vnc-internal
+        - sg-1050987 #salt-minion-internal
