adding new lice

--- a/salt_cfg/cloud.profiles.d/teamwork.conf
+++ b/salt_cfg/cloud.profiles.d/teamwork.conf
@@ -1,15 +1,14 @@
 teamwork:
-  provider: nminc_aws
+  provider: nminc_aws #Your Provider
   rename_on_destroy: True
   image: ami-96a818fe
-  size: t2.large
+  size: t2.large #Recommended (or larger)
   ssh_username: centos
   network_interfaces:
     - DeviceIndex: 0
-      SubnetId: subnet-d37fa7a4
-      #comment if not using nat routing
-      SourceDestCheck: False
-      SecurityGroupId:
+      SubnetId: subnet-d37fa7a4 #Specify your VPC Subnet
+      SourceDestCheck: False #Set to True if not using nat routing
+      SecurityGroupId: #Follow Instructions in README.md to create the proper AWS security groups
         - sg-87a93ee0 #teamwork-internal
         - sg-31509856 #ssh-internal
         - sg-47c0fc20 #vnc-internal
