--- a/salt_cfg/cloud.profiles.d/openmbee.conf
+++ b/salt_cfg/cloud.profiles.d/openmbee.conf
@@ -24,4 +24,6 @@ openmbee:
       ALFRESCO_VERSION: 4.2.e
       ALFRESCO_LICENSE_TYPE: community
       ALERT_EMAIL: cgaley@nomagic.com
-      MMS_RELEASE_VERSION: 2.1
+      MMS_RELEASE_VERSION: 2.2
+      MMS_INSTALLED: False
+      MMS_RELEASE_INSTALLED: 2.1
