--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,6 @@ salt_states/salt/apache/files/certs/**
 salt_states/pillar/smtp/init.sls
 salt_states/pillar/alfresco/init.sls
 salt_states/pillar/ldap/init.sls
+
+## Ignore Nanny Log
+log.csv
