--- a/salt_cfg/cloud.profiles.d/nameserver.conf
+++ b/salt_cfg/cloud.profiles.d/nameserver.conf
@@ -16,6 +16,9 @@ ns-master:
   extends: nameserver
   minion:
     grains:
+      farm_name: ''
+      nodename: ''
+      domain: ''
       node_type: ns
       dns_type: master
       farm_role_index: 1
@@ -57,6 +60,9 @@ ns-slave:
   extends: nameserver
   minion:
     grains:
+      farm_name: ''
+      nodename: ''
+      domain: ''
       node_type: ns
       dns_type: slave
       farm_role_index: 1
