--- a/salt_cfg/cloud.profiles.d/nameserver.conf
+++ b/salt_cfg/cloud.profiles.d/nameserver.conf
@@ -5,7 +5,7 @@ nameserver:
   rename_on_destroy: True
   minion:
     master: salt.nminc.co.
-  size: t2.micro
+  size: t2.small
   block_device_mappings:
     DeviceName: /dev/sda1
     Ebs.VolumeSize: 10
@@ -43,6 +43,20 @@ ns-master:
         at:
           type: PTR
           value: www.nminc.co.
+  network_interfaces:
+    - DeviceIndex: 0
+      #auto assign public ip (not EIP)
+      AssociatePublicIpAddress: False
+      SubnetId: subnet-d37fa7a4
+      SecurityGroupId:
+        - sg-3d981f5a
+        - sg-10509877
+        - sg-31509856
+        - sg-4efb3129
+      SourceDestCheck: False
+      
+ns1-nminc:
+  extends: ns-master
   network_interfaces:
     - DeviceIndex: 0
       PrivateIpAddress: 172.31.19.184
