--- a/salt_cfg/cloud.profiles.d/nameserver.conf
+++ b/salt_cfg/cloud.profiles.d/nameserver.conf
@@ -47,7 +47,6 @@ ns-master:
     - DeviceIndex: 0
       #auto assign public ip (not EIP)
       AssociatePublicIpAddress: False
-      SubnetId: subnet-d37fa7a4
       SecurityGroupId:
         - sg-3d981f5a
         - sg-10509877
@@ -88,6 +87,21 @@ ns-slave:
         - 172.31.0.0/16
         - 10.91.55.0/24
         - localhost
+  network_interfaces:
+    - DeviceIndex: 0
+      PrivateIpAddresses:
+        - Primary: True
+      #auto assign public ip (not EIP)
+      AssociatePublicIpAddress: False
+      SecurityGroupId:
+        - sg-3d981f5a
+        - sg-10509877
+        - sg-31509856
+        - sg-4efb3129
+      SourceDestCheck: False
+      
+ns2-nminc:
+  extends: ns-slave
   network_interfaces:
     - DeviceIndex: 0
       PrivateIpAddresses:
