--- a/salt_cfg/cloud.profiles.d/nameserver.conf
+++ b/salt_cfg/cloud.profiles.d/nameserver.conf
@@ -99,7 +99,23 @@ ns-slave:
       SourceDestCheck: False
       
 ns2-nminc:
-  extends: ns-slave
+  extends: nameserver
+  minion:
+    grains:
+      farm_name: ''
+      nodename: ''
+      domain: ''
+      node_type: ns
+      dns_type: slave
+      farm_role_index: 1
+      dns_reverse: 31.172
+      dns_trusted:
+        - 10.3.0.0/16
+        - 10.2.0.0/16
+        - 10.1.0.0/16
+        - 172.31.0.0/16
+        - 10.91.55.0/24
+        - localhost
   network_interfaces:
     - DeviceIndex: 0
       PrivateIpAddress: 172.31.19.208
