--- a/salt_cfg/cloud.profiles.d/ea.conf
+++ b/salt_cfg/cloud.profiles.d/ea.conf
@@ -1,10 +1,22 @@
 ea:
   extends: nminc-aio
-  size: m4.xlarge
   block_device_mappings:
     DeviceName: /dev/sda1
-    Ebs.VolumeSize: 10
+    Ebs.VolumeSize: 300
     Ebs.VolumeType: gp2
+  network_interfaces:
+    - DeviceIndex: 0
+      PrivateIpAddress: 172.31.25.144
+      #auto assign public ip (not EIP)
+      AssociatePublicIpAddress: False
+      SubnetId: subnet-d37fa7a4
+      SecurityGroupId:
+        - sg-af5098c8 #alfresco-internal
+        - sg-7a26f21d #jms-internal
+        - sg-4efb3129 #icmp-internal
+        - sg-10509877 #salt-minion-internal
+        - sg-31509856 #ssh-internal
+      SourceDestCheck: False
   minion:
     grains:
       farm_name: ''
@@ -17,5 +29,7 @@ ea:
       ALFRESCO_VERSION: 4.2.e
       ALFRESCO_LICENSE_TYPE: community
       ALERT_EMAIL: cgaley@nomagic.com
-      MMS_RELEASE_VERSION: 2.1
+      MMS_RELEASE_VERSION: 2.2.1
+      MMS_INSTALLED: False
+      MMS_RELEASE_INSTALLED: ''
       LDAP: ldap-ad
