updates to reactor

--- a/salt_cfg/master.d/reactor.conf
+++ b/salt_cfg/master.d/reactor.conf
@@ -1,17 +1,12 @@
 reactor:
-
   - 'minion_start':
     - /srv/reactor/sync_all.sls
-    
+  - 'salt/cloud/*/created':
+    - /srv/reactor/auth-complete.sls
   - 'salt/auth':
     - /srv/reactor/auth-pending.sls
   - 'salt/minion/*/start':
     - /srv/reactor/auth-complete.sls
-    
-
-  - 'decom':
+  - 'salt/cloud/*/destroyed':
     - /srv/reactor/decommision.sls
-
-  #- 'minion_start':
-  #  - /srv/salt/haproxy/configure.sls
 
