--- a/salt_cfg/master.d/reactor.conf
+++ b/salt_cfg/master.d/reactor.conf
@@ -8,5 +8,5 @@ reactor:
   - 'salt/minion/*/start':
     - /srv/reactor/auth-complete.sls
   - 'salt/cloud/*/destroyed':
-    - /srv/reactor/decommision.sls
+    - /srv/reactor/test.sls
 
