--- a/salt_cfg/master.d/reactor.conf
+++ b/salt_cfg/master.d/reactor.conf
@@ -2,7 +2,7 @@ reactor:
   - 'minion_start':
     - /srv/reactor/sync_all.sls
   - 'salt/cloud/*/created':
-    - /srv/reactor/tes.sls
+    - /srv/reactor/test.sls
   - 'salt/auth':
     - /srv/reactor/auth-pending.sls
   - 'salt/minion/*/start':
