--- a/salt_cfg/master.d/reactor.conf
+++ b/salt_cfg/master.d/reactor.conf
@@ -1,6 +1,6 @@
 reactor:
   - 'salt/cloud/*/created':
-    - /srv/reactor/created.sls
+    - /srv/reactor/test.sls
   - 'salt/auth':
     - /srv/reactor/auth-pending.sls
   - 'salt/minion/*/start':
